# towprogram

./: .replit  app.py  package-lock.json  package.json  pyproject.toml
attached_assets/: index_1773349893330.html
client/: requirements.md
client/src/: App.tsx  index.css
client/src/components/: Layout.tsx
client/src/hooks/: use-telegram.ts  use-websocket.ts  use-whatsapp.ts
client/src/pages/: Home.tsx  TelegramDashboard.tsx  WhatsappDashboard.tsx
server/: index.ts  routes.ts  storage.ts  whatsapp.ts
shared/: routes.ts  schema.ts
static/: manifest.json  pwa-sw.js
templates/: index.html
