[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cryptg>=0.5.2",
    "eventlet>=0.40.4",
    "flask>=3.1.3",
    "flask-socketio>=5.6.1",
    "gunicorn>=25.1.0",
    "python-engineio>=4.13.1",
    "python-socketio>=5.16.1",
    "requests>=2.32.5",
    "telethon>=1.42.0",
]
